--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_mixins.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_mixins.scss
@@ -174,8 +174,8 @@
 }
 
 // Quote characters
-@mixin quotes {
-	font-size: rem(30px);
+@mixin quotes($fs) {
+	font-size: rem($fs);
 	@include inline-block(middle);
 	@include sizing(12px, 12px);
 	line-height: 1.2;
