--- a/khyeras/styles/khyeras_v1/template/overall_header.html
+++ b/khyeras/styles/khyeras_v1/template/overall_header.html
@@ -142,21 +142,7 @@
 			<div class="headerbar" role="banner">
 				<!-- EVENT overall_header_headerbar_before -->
 				<div class="header-content">
-					<div id="site-description" class="site-description">
-						<h1>
-							<a href="<!-- IF U_SITE_HOME -->{U_SITE_HOME}<!-- ELSE -->{U_INDEX}<!-- ENDIF -->" title="<!-- IF U_SITE_HOME -->{L_SITE_HOME}<!-- ELSE -->{L_INDEX}<!-- ENDIF -->">{SITENAME}</a>
-						</h1>
-						<h3>{SITE_DESCRIPTION}</h3>
-						<p class="skiplink"><a href="#start_here">{L_SKIP}</a></p>
-					</div>
-					<div class="header-divider"></div>
-					<div id="site-quotes" class="site-quotes">
-						<p><span class="quote-left">&ldquo;</span>Six, you'll need to step back a bit. I need room to do this.<span class="quote-right">&rdquo;</span></p>
-						<p><span class="quote-left">&ldquo;</span>I was only half telling the truth. I would need room, but I just wasn't comfortable having an angry, naked demon looming that close to me while I was on the floor. Go figure.<span class="quote-right">&rdquo;</span></p>
-						<p class="quote-author">
-							<em>- Victor Sage</em>
-						</p>
-					</div>
+					<!-- INCLUDE custom/header_content.html -->
 				</div>
 				<div class="header-overlay"></div>
 			</div>
