--- a/khyeras/_dev/styles/khyeras_v1/template/overall_footer.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/overall_footer.html
@@ -8,28 +8,12 @@
 			<div class="footer-inner">
 				<div class="wrapper">
 					<div class="flex-row flex-row-20">
-						<div class="flex-column">
-							<h4>Random Content Goes Here</h4>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex vel, labore. Illo modi voluptatibus laborum incidunt atque ratione tenetur adipisci, culpa sit totam, tempore beatae sint laboriosam reiciendis magnam quis. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex vel, labore. Illo modi voluptatibus laborum incidunt atque ratione tenetur adipisci, culpa sit totam, tempore beatae sint laboriosam reiciendis magnam quis.</p>
+						<div class="flex-column has-discord">
+							<div id="discord-frame">
+								<iframe src="//titanembeds.com/embed/482924002411806732?css=330" frameborder="0"></iframe>
+							</div>
 						</div>
 						<!-- INCLUDE custom/footer_links.html -->
-						<div class="flex-column has-copyright">
-							<p>Freed from Bhelest's nightmares, the realm of Khy'eras unveiled vast reaches perfect for exploration. Create a character and unlock the land's secrets. Original high fantasy RPG with no word count.</p>
-							<p>
-								<a class="button-link" href="//rpgrating.com" target="_blank">
-									<!-- <img src="//rpgrating.com/ratings/333.png" alt="Rated 333 from RPGRating.com" title="Rated 333 from RPGRating.com" /> -->
-								</a>
-							</p>
-							<p class="copyright">
-								&copy; 2018 Khy'eras RPG<br />
-								Content and layout design by Adria/Memoria<br />
-								<!-- EVENT overall_footer_copyright_prepend -->
-								{CREDIT_LINE}
-								<!-- IF TRANSLATION_INFO --><br />{TRANSLATION_INFO}<!-- ENDIF -->
-								<!-- EVENT overall_footer_copyright_append -->
-								<!-- IF DEBUG_OUTPUT --><br />{DEBUG_OUTPUT}<!-- ENDIF -->
-							</p>
-						</div>
 					</div>
 					<p class="bottom-line">
 						<!-- EVENT overall_footer_timezone_before -->
