--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_footer.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_footer.scss
@@ -16,6 +16,9 @@
 			&.has-copyright {
 				order: -1;
 			}
+			&.has-discord {
+				flex: 0 0 60%;
+			}
 			.copyright, .bottom-line {
 				font-size: rem(13px);
 			}
@@ -25,6 +28,17 @@
 					@include inline-block(middle);
 					margin: 0 $ffs-half $ffs $ffs-half;
 				}
+			}
+		}
+		#discord-frame {
+			position: relative;
+			padding-bottom: 50%;
+			height: 0;
+			overflow: hidden;
+			border: 1px solid $color-05;
+			iframe {
+				@include position($type: absolute, $top: 0, $bottom: 0, $left: 0, $right: 0);
+				@include sizing(100%, 100%);
 			}
 		}
 		.bottom-line {
