--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_variables.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_variables.scss
@@ -1,20 +1,20 @@
-/* Paths
-========================================================================== */
+// Paths
+// ============================================== //
 
 $assets: '../theme';
 $fonts: $assets + '/fonts/';
 $images: $assets + '/images/';
 $phpbb-images: '../../../images/content/';
 
-/* Classes
-========================================================================== */
+// Classes
+// ============================================== //
 
 $overall: section-overall;
 $ucp: section-ucp;
 $mcp: section-mcp;
 
-/* Colors
-========================================================================== */
+// Colors
+// ============================================== //
 
 $color-00: #ededed; // very light gray
 $color-01: #ffffff; // white
@@ -39,8 +39,8 @@ $color-19: #ad7337; // orange
 $color-20: #ae973f; // yellow
 $color-21: #4d2e56; // purple
 
-/* Fonts
-========================================================================== */
+// Fonts
+// ============================================== //
 
 $base-font-size: 16;
 $global-font-size: 14px;
@@ -50,11 +50,11 @@ $font-01: 'Fira Sans', $sans-serif-fb;
 $font-02: 'Spectral', $serif-fb;
 $font-03: 'Selima', $sans-serif-fb;
 
-/* Other
-
-   ffi = form field indent
-   ffs = form field spacing
-========================================================================== */
+// Other
+//
+// ffi = form field indent
+// ffs = form field spacing
+// ============================================== //
 
 $alt-field-width: 50%;
 $ffi-01: 300px;
