--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/discord.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/discord.scss
@@ -41,7 +41,7 @@ input[type='text']:not(.browser-default):focus:not([readonly]) + label {
 /* Resets
 ============================================== */
 
-textarea.materialize-textarea, input[type='text'], input[type=text]:not(.browser-default), .btn, .btn-large, .navbar-fixed, .side-nav li, .side-nav li > a, footer, #footercontainer #messageboxouter {
+textarea.materialize-textarea, input[type='text'], input[type=text]:not(.browser-default), .btn, .btn-large, .navbar-fixed, nav, nav a.button-collapse, nav a.button-collapse i, .side-nav li, .side-nav li > a, footer, #footercontainer #messageboxouter {
 	height: auto;
 }
 
@@ -149,38 +149,26 @@ input[type='checkbox'] {
 
 .navbar-fixed nav {
 	background: var(--header);
+	padding: 10px 20px;
+	&, a.button-collapse, a.button-collapse i {
+		line-height: 1;
+	}
+	a.button-collapse {
+		margin: 0;
+	}
+	.brand-logo {
+		display: none;
+	}
+	.nav-wrapper > .container:before {
+		@include spectral-common;
+		font-size: 20px;
+		content: 'Chat With Us';
+		@include position($type: absolute, $top: 2px, $left: 0, $right: 0);
+		display: block;
+		text-align: center;
+	}
 }
 
-
-
-//
-
-
-
-//
-
-// nav, nav .nav-wrapper i, nav a.button-collapse, nav a.button-collapse i {
-//     height: 60px;
-//     line-height: 60px;
-// }
-//
-// .navbar-fixed .brand-logo {
-//     display: none;
-// }
-//
-// .navbar-fixed .nav-wrapper > .container:before {
-//     font-family: "Spectral",garamond,times new roman,serif;
-//     font-variant: small-caps;
-//     font-size: 20px;
-//     content: 'Chat With Us';
-//     position: absolute;
-//     top: 0;
-//     left: 0;
-//     right: 0;
-//     display: block;
-//     margin: auto;
-//     text-align: center;
-// }
 //
 // #guild-nav, #members-nav {
 //     padding: 20px;
