--- a/khyeras/styles/khyeras_v1/theme/discord.css
+++ b/khyeras/styles/khyeras_v1/theme/discord.css
@@ -37,7 +37,7 @@ input[type='text']:not(.browser-default):focus:not([readonly]) + label {
 
 /* Resets
 ============================================== */
-textarea.materialize-textarea, input[type='text'], input[type=text]:not(.browser-default), .btn, .btn-large, .navbar-fixed, nav, nav a.button-collapse, nav a.button-collapse i, .side-nav li, .side-nav li > a, footer, #footercontainer #messageboxouter {
+textarea.materialize-textarea, input[type='text'], input[type=text]:not(.browser-default), .btn, .btn-large, #wdt-emoji-search, #wdt-emoji-search:focus, .navbar-fixed, nav, nav a.button-collapse, nav a.button-collapse i, .side-nav li, .side-nav li > a, footer, #footercontainer #messageboxouter, #wdt-emoji-preview #wdt-emoji-preview-img {
   height: auto;
 }
 
@@ -45,12 +45,21 @@ textarea.materialize-textarea, input[type='text'], input[type=text]:not(.browser
   min-height: 0;
 }
 
-.side-nav li > a, .side-nav .userView, #members-nav li > a.subheader, .membername {
+.side-nav li > a, .side-nav .userView, #members-nav li > a.subheader, .membername, #footercontainer .currentuserchip, #wdt-emoji-preview, #wdt-emoji-preview #wdt-emoji-preview-img, .modal #authfields .row .col {
   padding: 0;
 }
 
-.membercircle {
+.membercircle, #chatcontent > p, #footercontainer .currentuserchip, #footercontainer .currentuserchip #currentuserimage_parent, .modal #authfields .row, #userembedmodal .select-wrapper + p {
   margin: 0;
+}
+
+.circle:hover {
+  border-radius: 50%;
+  background: none;
+}
+
+.navbar-fixed nav .brand-logo, #chatcontent .chatusername .authorhash, #chatcontent .chatusername .authordiscriminator, #footercontainer .currentuserchip #currentusername #curuser_discrim, #usercard .identity .hash, #usercard .identity .discriminator, #usercard .avatar + br {
+  display: none;
 }
 
 /* Typography
@@ -69,12 +78,13 @@ b, strong, optgroup, .chatusername, p.mentioned, .richembed .field-name, #userca
 
 /* Form fields
 ============================================== */
-textarea.materialize-textarea, input[type='text'], input[type='text']:not(.browser-default), .btn, .btn-large {
+textarea.materialize-textarea, input[type='text'], input[type='text']:not(.browser-default), .btn, .btn-large, #wdt-emoji-search, #wdt-emoji-search:focus {
   line-height: 1.45;
   border-radius: 3px;
+  font-size: inherit;
 }
 
-textarea.materialize-textarea, input[type='text'], input[type='text']:not(.browser-default) {
+textarea.materialize-textarea, input[type='text'], input[type='text']:not(.browser-default), #wdt-emoji-search, #wdt-emoji-search:focus {
   background: #ffffff;
   color: #333333;
   width: 100%;
@@ -106,6 +116,10 @@ input[type='radio']:not(:checked) + label:before, input[type='checkbox'].filled-
   background-color: #ffffff;
 }
 
+input[type='radio']:not(:checked) + label, input[type='radio']:checked + label {
+  font-size: inherit;
+}
+
 input[type='radio']:checked + label:after {
   background-color: #1c2f25;
   border: 3px solid #ffffff;
@@ -114,12 +128,13 @@ input[type='radio']:checked + label:after {
 input[type='checkbox'].filled-in:checked + label:after, input[type='checkbox'].filled-in:not(:checked) + label:after {
   width: 16px;
   height: 16px;
+  margin-top: 2px;
 }
 
 input[type='checkbox'].filled-in:checked + label:before {
   width: 5px;
   height: 10px;
-  top: 0.5px;
+  top: 2.5px;
   left: 2px;
   border-right-color: #1c2f25;
   border-bottom-color: #1c2f25;
@@ -169,10 +184,6 @@ input[type='checkbox'].filled-in:checked + label:before {
   margin: 0;
 }
 
-.navbar-fixed nav .brand-logo {
-  display: none;
-}
-
 .navbar-fixed nav .nav-wrapper > .container:before {
   font-family: "Spectral", garamond, times new roman, serif;
   font-variant: small-caps;
@@ -215,10 +226,6 @@ input[type='checkbox'].filled-in:checked + label:before {
 
 .side-nav li > a[id^=channel] {
   margin: 0 0 0 20px;
-}
-
-.side-nav .userView .circle:hover {
-  border-radius: 50%;
 }
 
 .side-nav .userView .name {
@@ -271,4 +278,287 @@ input[type='checkbox'].filled-in:checked + label:before {
   position: absolute;
   top: 5px;
   left: 40px;
+}
+
+/* Chat
+============================================== */
+#chatcontent {
+  padding: 44px 0 10px;
+}
+
+#chatcontent > p {
+  border-top: 1px dashed #15212c;
+  width: auto;
+  padding: 10px 20px;
+}
+
+#chatcontent > p:first-child {
+  border-top: 0;
+}
+
+#chatcontent > p.collapsed .chatmessage {
+  margin-top: 0;
+}
+
+#chatcontent .chatusername {
+  font-size: inherit;
+}
+
+#chatcontent .chatmessage {
+  margin-top: 10px;
+}
+
+#chatcontent span.reactions {
+  margin: 0 -2.5px -5px -2.5px;
+}
+
+#chatcontent span.reactions .reaction {
+  background: rgba(0, 0, 0, 0.25);
+  margin: 0 2.5px 5px 2.5px;
+}
+
+/* Footer
+============================================== */
+#footercontainer {
+  border: 0;
+  margin: 0 -5px;
+  padding: 10px 20px;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+              -ms-grid-row-align: center;
+          align-items: center;
+}
+
+#footercontainer, #footercontainer #messageboxouter, #footercontainer #visitor_mode_message {
+  width: auto;
+}
+
+#footercontainer > div, #footercontainer #nameplate {
+  margin: 0;
+  padding: 0 5px;
+  top: 0;
+}
+
+#footercontainer .currentuserchip #currentusername, #footercontainer #messageboxouter #visitor_login_btn {
+  margin: 0 0 0 10px;
+}
+
+#footercontainer .currentuserchip #currentuserimage_parent, #footercontainer #messageboxouter {
+  line-height: 0;
+}
+
+#footercontainer .currentuserchip #currentuserimage_parent, #footercontainer .currentuserchip #currentusername {
+  vertical-align: middle;
+}
+
+#footercontainer .currentuserchip #currentusername {
+  left: 0;
+}
+
+#footercontainer .currentuserchip #currentuserimage_parent #currentuserimage {
+  margin-right: 0;
+}
+
+#footercontainer #messageboxouter {
+  -webkit-box-flex: 1;
+  -webkit-flex: 1 1 100%;
+      -ms-flex: 1 1 100%;
+          flex: 1 1 100%;
+  overflow: visible;
+}
+
+#footercontainer #messageboxouter #messagebox {
+  padding-right: 35px;
+}
+
+#footercontainer .wdt-emoji-picker {
+  top: 14px;
+}
+
+/* Emoji Popup
+============================================== */
+.wdt-emoji-popup {
+  height: 250px;
+  top: 0 !important;
+  bottom: 0;
+  right: 20px;
+  margin: auto;
+  overflow: hidden;
+  border-color: rgba(0, 0, 0, 0.8);
+  border-radius: 0;
+}
+
+.wdt-emoji-popup, .wdt-emoji-popup h3 {
+  background: #15212c;
+}
+
+.wdt-emoji-popup h3, .wdt-emoji-popup #wdt-emoji-preview-bundle, .wdt-emoji-popup #wdt-emoji-preview-text, .wdt-emoji-popup #wdt-emoji-preview-name {
+  color: #ff00ff;
+}
+
+.wdt-emoji-popup h3, .wdt-emoji-popup #wdt-emoji-footer, .wdt-emoji-popup #wdt-emoji-menu-header, .wdt-emoji-popup .wdt-emoji {
+  padding: 5px;
+}
+
+.wdt-emoji-popup h3, .wdt-emoji-popup #wdt-emoji-preview-bundle {
+  font-size: inherit;
+}
+
+.wdt-emoji-popup h3, .wdt-emoji-popup #wdt-emoji-preview-name {
+  font-weight: 500;
+}
+
+.wdt-emoji-popup .wdt-emoji-tab.active {
+  border-bottom-color: #67e5e2;
+}
+
+.wdt-emoji-popup span.emoji-outer {
+  width: 16px;
+  height: 16px;
+}
+
+.wdt-emoji-popup #wdt-emoji-footer, .wdt-emoji-popup #wdt-emoji-menu-header {
+  background: #0d171b;
+}
+
+.wdt-emoji-popup #wdt-emoji-search {
+  margin: 10px;
+  width: 95%;
+}
+
+.wdt-emoji-popup #wdt-emoji-preview-bundle {
+  bottom: 12px;
+  font-weight: 300;
+}
+
+.wdt-emoji-popup #wdt-emoji-preview #wdt-emoji-preview-text {
+  top: 0;
+}
+
+.wdt-emoji-popup #wdt-emoji-preview #wdt-emoji-preview-img span.emoji-outer.emoji-sizer {
+  width: 24px;
+  height: 24px;
+}
+
+/* Modal
+============================================== */
+.modal {
+  top: 0 !important;
+  bottom: 0 !important;
+  margin: auto;
+  max-height: 75%;
+  border-radius: 0;
+  box-shadow: none;
+}
+
+.modal.bottom-sheet {
+  max-height: 55%;
+}
+
+.modal p, .modal #discordlogin_btn, .modal #guest_login_instr, .modal input[type='text'], .modal #guestlogin_box:before {
+  margin: 0 0 10px 0;
+}
+
+.modal h4, .modal #loginmodal h4 {
+  font-size: 1.25rem;
+}
+
+.modal label, .modal #discordlogin_btn_warn {
+  font-size: 0.75rem;
+}
+
+.modal h4 {
+  font-family: "Spectral", garamond, times new roman, serif;
+  font-variant: small-caps;
+  margin: 0 0 10px 0;
+}
+
+.modal .modal-content {
+  padding: 20px;
+}
+
+.modal .row {
+  margin: 0 -10px;
+}
+
+.modal .row > .col {
+  padding: 0 10px;
+}
+
+.modal #discordlogin_btn_warn, .modal #guestlogin_box:before {
+  font-style: italic;
+}
+
+.modal #authfields .row .col {
+  float: none;
+  width: auto;
+}
+
+.modal #guestlogin_box:before {
+  content: '- OR -';
+  display: block;
+  font-size: 0.875rem;
+  font-weight: 500;
+}
+
+.modal #modal_guildinfobox {
+  background-color: transparent;
+  border-right: 1px dashed #0d171b;
+}
+
+/* Login Modal
+============================================== */
+#loginmodal, #loginmodal .flow-text {
+  font-size: 0.75rem;
+}
+
+/* User Embed Modal
+============================================== */
+#userembedmodal .modal-content > .row {
+  margin-bottom: 20px;
+}
+
+#userembedmodal .modal-content > .row:last-child {
+  margin-bottom: 0;
+}
+
+#userembedmodal .modal-content > .row:nth-child(2) > div {
+  padding: 0 10px;
+}
+
+#userembedmodal #logout_btn {
+  margin-right: 10px;
+  padding: 6px 5px 3px 5px;
+}
+
+/* User Card
+============================================== */
+#usercard .avatar, #usercard .badges {
+  margin: 0 0 10px 0;
+}
+
+#usercard .identity, #usercard .bottag, #usercard .role .bubble {
+  display: inline-block;
+}
+
+#usercard .identity, #usercard .bottag {
+  vertical-align: middle;
+}
+
+#usercard .bottag {
+  margin: 0 0 10px 10px;
+}
+
+#usercard .roles {
+  padding-left: 5px;
+}
+
+#usercard .roles .bubble {
+  margin: 0 5px 10px 5px;
+  vertical-align: top;
+}
+
+#usercard .roles .text {
+  color: #ff00ff;
 }
